--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "type": "commonjs",
   "main": "add-custom-values.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create": "node create-form.js",
+    "add-custom-values": "node add-custom-values.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
