--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "create-daily-log": "node daily-logs/create-form.js",
-    "create-material-inspection": "node inspections/material-inspections/create-form.js",
-    "create-work-inspection": "node inspections/work-inspections/create-form.js"
+    "create-form": "node create-form.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
