--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "create-form": "node create-form.js"
   },
   "dependencies": {
+    "@procore/js-sdk": "^4.2.1",
     "axios": "^1.8.4",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {}
+    "express": "^5.1.0",
+    "punycode": "^2.3.1"
+  }
 }
