--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "open": "^10.1.1",
     "punycode": "^2.3.1",
     "request": "^2.88.2",
     "uuid": "^11.1.0"
